--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -4,7 +4,7 @@ import ImagesVertical from "./images-vertical.astro";
 import CatalogueItem from '@components/catalogue-item-related-product/index.astro'
 import Text from './text.astro'
 import type { ICartItemMap } from "@components/cart/interfaces";
-import { capitalizeEveryWord, type ICatalogueMap } from "@misc";
+import { capitalizeEveryWord, httpToHttps, type ICatalogueMap } from "@misc";
 import type { ILink } from "@components/layout/footer/interfaces";
 
 interface Props {
@@ -22,7 +22,7 @@ const breadcrumbItems:ILink[] = [
     {name:"Home",url:"/"},
     {name:capitalizeEveryWord(mainType),url:`/collections/${mainType}`},
     {name:capitalizeEveryWord(subType.replaceAll('-',' ')),url:`/collections/${mainType}/${subType}`},
-    {name:name,url:`/${mainType}/${url}/${id}`}
+    {name:name,url:httpToHttps(Astro.url.href)}
 ]
 ---
 
