--- a/src/components/layout/header/menu-sidebar/index.astro
+++ b/src/components/layout/header/menu-sidebar/index.astro
@@ -12,7 +12,7 @@ const { collectionMenuMap } = Astro.props as Props
 ---
 
 <input type="checkbox" hidden id="menu-sidebar-checkbox" class="peer/menu" />
-<div id="menu-sidebar" class="fixed top-0 right-full peer-checked/menu:translate-x-full h-full w-full max-w-[300px] bg-white shadow-lg transition-all duration-300 z-50">
+<div id="menu-sidebar" class="fixed top-0 right-full peer-checked/menu:translate-x-full h-full w-full max-w-80 bg-white shadow-lg transition-all duration-300 z-50">
     <div class="flex flex-row-reverse" id="menu-sidebar-top-bar">
         <label for="menu-sidebar-checkbox" class="cursor-pointer p-2 z-[60]">
             <CloseSidebarIcon />
