--- a/src/components/catalogue-item-related-product/image.astro
+++ b/src/components/catalogue-item-related-product/image.astro
@@ -10,9 +10,10 @@ interface Props extends IProductImages {
     render:boolean;
     showRadio:boolean;
     len:number;
+    productName:string;
 }
 
-const { name, ext, id, checked, index, len, productPageKeyProduct, render, showRadio } = Astro.props as Props
+const { name, ext, id, checked, index, len, productPageKeyProduct, render, showRadio, productName } = Astro.props as Props
 const filename = PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX + name
 const sizes = productPageKeyProduct ? '100vw' : '(min-width: 1536px) 25vw, (min-width: 640px) 33vw, 50vw'
 const isProductPage = ['earrings'].some(e=>Astro.url.pathname.startsWith(`/${e}/`))
@@ -44,7 +45,7 @@ const isProductPage = ['earrings'].some(e=>Astro.url.pathname.startsWith(`/${e}/
                 src={`${filename}_768x768${ext}`} 
                 srcset={`${filename}_768x768${ext} 768w, ${filename}${ext} 2048w`} 
                 sizes={sizes}
-                alt={name} 
+                alt={productName} 
                 width={768}
                 height={768}
                 class="object-cover object-center"
